# hermes-bug-report-improver

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  __init__.py  handler.py  hermes-bug-report-improver_plan.md  plugin.yaml  prompts.py  pyproject.toml  rendering.py  schema.py
hermes_bug_report_improver/: rendering.py
tests/: conftest.py  test_handler.py
