[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-bug-report-improver"
version = "0.1.0"
description = "Hermes Agent plugin that rewrites raw bug reports into structured ones."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "sergiparpal" }]
keywords = ["hermes", "hermes-agent", "plugin", "bug-report", "qa"]

[project.optional-dependencies]
# Dev/test tooling only; the plugin itself has no runtime dependencies.
dev = ["pytest>=7", "coverage>=7"]

# The distribution is `hermes-bug-report-improver` (hyphenated) but the import
# package is `hermes_bug_report_improver` (a real subdirectory whose modules use
# relative imports such as `from . import schema`). Discover that package
# explicitly; `tests/` and the root Hermes shim (`./__init__.py`) stay out of the
# built distribution.
[tool.setuptools.packages.find]
include = ["hermes_bug_report_improver*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so tests can `import hermes_bug_report_improver`
# without installing the package (the system Python is externally managed).
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["hermes_bug_report_improver"]

[tool.coverage.report]
show_missing = true
